--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Joshs</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
-</html>
+!!!
+%html
+  %head
+    %title= title
+    = csrf_meta_tag
+    = render 'layouts/stylesheets'
+  %body
+    .container
+      = render 'layouts/header'
+      %section.round
+        = yield
+      = render 'layouts/footer'
