skeleton complete. needs tested.

--- a/app/views/pages/blog.html.haml
+++ b/app/views/pages/blog.html.haml
@@ -1,2 +1,3 @@
-<h1>Pages#blog</h1>
-<p>Find me in app/views/pages/blog.html.erb</p>
+%h1 Site Blog
+%p
+  plan to be the first thing started. even before site launch
