--- a/app/views/pages/cat.html.haml
+++ b/app/views/pages/cat.html.haml
@@ -1,2 +1,4 @@
-<h1>Pages#cat</h1>
-<p>Find me in app/views/pages/cat.html.erb</p>
+%h1 Catalog
+%p
+  This is the Pigeon Pack catalog page. All cards available
+  for sale will appear here.
