--- a/app/views/pages/vote.html.haml
+++ b/app/views/pages/vote.html.haml
@@ -1,2 +1,4 @@
-<h1>Pages#vote</h1>
-<p>Find me in app/views/pages/vote.html.erb</p>
+%h1 Cast Your Vote
+%p
+  this is where individual card voting will happen
+
