--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,5 +2,5 @@
   = link_to logo, root_path
   %nav.round
     %ul
-      %li= link_to "Login", signin_path
+      %li= link_to "Login", login_path
       %li= link_to "Sign Up", signup_path
