--- a/app/views/pages/buy.html.haml
+++ b/app/views/pages/buy.html.haml
@@ -1,2 +1,3 @@
-<h1>Pages#buy</h1>
-<p>Find me in app/views/pages/buy.html.erb</p>
+%h1 Purchase a Card
+%p
+  this is where card purchasing will happen
