--- a/app/views/pages/prob.html.haml
+++ b/app/views/pages/prob.html.haml
@@ -1,2 +1,4 @@
-<h1>Pages#prob</h1>
-<p>Find me in app/views/pages/prob.html.erb</p>
+%h1 Limbo
+%p
+  This is where new Pigeon Pack cards are voted on.
+  Successful cards make it to the catalog.
