--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,3 +4,7 @@
     %ul
       %li= link_to "Login", login_path
       %li= link_to "Sign Up", signup_path
+  %bar.round
+    %ul
+      %li= link_to "Limbo", limbo_path
+      %li= link_to "Catalog", catalog_path
