--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,6 @@
 %footer
   %nav.round
     %ul
+      %li= link_to "Home", root_path
       %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
